--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -4,10 +4,15 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    
+		
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="21" />
-
+        
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Settings"
+            android:name=".SettingsActivity"
             android:label="@string/action_settings" >
         </activity>
     </application>
